--- a/src/App.css
+++ b/src/App.css
@@ -3,5 +3,11 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box !important;
+}
+
+:root {
+  --mobile: 480px;
+  --tablet: 768px;
+  --desktop: 1024px;
 }
